# Lab2/pzpi-22-3-shpak-denys-lab2/docs/swagger.json
@@ -1828,10 +1828,6 @@
                 "name": {
                     "description": "Name is the user name\nExample: John Doe",
                     "type": "string"
-                },
-                "password": {
-                    "description": "Email is the user email\nExample: password123",
-                    "type": "string"
                 }
             }
         },
@@ -2044,6 +2040,11 @@
                     "description": "The duration of the delivery\nexample: 2 hours 30 minutes",
                     "type": "string",
                     "example": "2 hours 30 minutes"
+                },
+                "route_id": {
+                    "description": "Id of the route\nexample: 1",
+                    "type": "integer",
+                    "example": 1
                 },
                 "status": {
                     "description": "Status is the status of the delivery\nexample: completed",
